install(FILES
  ceph.target
  ceph-fuse.target
  ceph-osd.target
  ceph-mgr.target
  ceph-mon.target
  ceph-mds.target
  ceph-radosgw.target
  ceph-rbd-mirror.target
  ceph-fuse@.service
  ceph-mds@.service
  ceph-mgr@.service
  ceph-mon@.service
  ceph-osd@.service
  ceph-radosgw@.service
  ceph-rbd-mirror@.service
  ceph-disk@.service
  ceph-volume@.service
  rbdmap.service
  DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/systemd/system)
